# whales-identification

./: .dvcignore  .gitignore  .mcp.json  .pre-commit-config.yaml  API_CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  LICENSES_ANALYSIS.md  LICENSE_DATA.md  LICENSE_MODELS.md  MODEL_CARD.md  Makefile  NEXT_STEPS.md  PLAN_STAGE3.md  README.md  docker-compose.prod.yml  docker-compose.yml  fly.frontend.toml  fly.toml  model_contract.yaml  models_config.yaml  pyrightconfig.json  pytest.ini  render.yaml
.claude/: settings.json
.devcontainer/: devcontainer.json
.dvc/: config
.github/: labeler.yml
data/: README.md
docs/: API_REFERENCE.md  CI_CD_EVIDENCE.md  CODE_REVIEW_SEROV.md  COMPLIANCE.md  DATASET_CONTRIBUTION.md  DEPLOYMENT.md  FAQ.md  GRANT_DELIVERABLES.md  INTEGRATION_GUIDE.md  MLOPS_PLAYBOOK.md  ML_ARCHITECTURE.md  NOTEBOOKS_INDEX.md  PERFORMANCE_REPORT.md  PRE_COMMIT_GUIDE.md  QUICKSTART_COLAB.ipynb  RESEARCH_NOTES.md  ROADMAP.md  SOLUTION_OVERVIEW.md  TESTING_STRATEGY.md  USER_GUIDE_BIOLOGIST.md  USER_TESTING_REPORT.md  index.md
docs_fsie/: Заключительный_НТО_draft.md  Отчет промежуточный 2 этап ИСПРАВЛЕННЫЙ.docx  Руководство_контрибьютора.md  Руководство_пользователя.md  Руководство_разработчика.md  Руководство_системного_администратора.md  Справка устранение замечаний 2 этап (2025-2026).docx
frontend/: Dockerfile  index.html  jest.config.cjs  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
huggingface/: HUGGINGFACE_UPDATE.md  LICENSE  README.md
research/demo-ui/: README.md  inference_transformers.py  pyproject.toml
(+166 files in other folders)
